# 95wm

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: Button.cpp  Button.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Root.cpp  Root.hpp  Taskbar.cpp  Taskbar.hpp  WindowManager.cpp  WindowManager.hpp  app.cpp  app.h  main.cxx  util.cpp  util.hpp
test/: CMakeLists.txt  app_test.cpp
tools/share/cmake/: CxxFlags.cmake
