## Use compiler debugging flags per default
INCLUDE(CxxFlags)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")

## Creating Binaries for each *.cxx file
SET(PROJECT_BIN ${PROJECT_NAME})
ADD_EXECUTABLE(${PROJECT_BIN} ${MAINFOLDER}/src/main.cxx ${PROJECT_SRCS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${Threads_INCLUDE_DIR} ${X11_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_BIN} ${Boost_LIBRARIES} X11 pthread)
INSTALL(TARGETS ${PROJECT_BIN} DESTINATION bin)
